# graham_investor

./: .gitignore  README.md  config.py  model.py  monitor.py  pyproject.toml  requirements.txt  screener.py  ws  xhs_content.md
data/universe/sources/: cn_seed.csv  hk_seed.csv  us_seed.csv
docs/plans/: 2026-03-18-long-term-observation-design.md  2026-04-11-cli-restructure-design.md
tests/: test_multi_market_design.py
wealthkeeper/: cli.py  config.py  copilot.py  db.py  model.py  monitor.py  refresh_universe.py  screener.py
